# mipptx

./: pyproject.toml
mipptx/: base.py  charts.py  enums.py  presentation.py  shapes.py  text.py  utils.py
